Structure & name changes.

--- a/index.html
+++ b/index.html
@@ -3,38 +3,27 @@
    "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Water, Wine, and Blood</title>
+    <title>Revelation</title>
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   </head>
   <body>
     <div class="envelope">
-    <div class="lbar">
-      <ul class="menu">
-        <li><a href="./">Home</a></li>
-        <li><a href="./" class="selected">Software</a></li>
-      </ul>
-    </div>
-    <div class="header">
-      <a href="./">Revelation</a> &raquo; <a href="./">Software</a>
-    </div>
-    <div class="content">
-      <h1>Software</h1> 
-      <p>Here is some software that I've published. For an up-to-date list, please <a href="http://github.com/abscondment">fork me (abscondment)</a> on github.</p>
-      <dl>
-      <dt><a href="http://github.com/abscondment/rubyvor">RubyVor</a></dt>
-      <dd>
-        <p>RubyVor is a <a href="http://rubygems.org">ruby gem</a> providing efficient computation of <a href="http://en.wikipedia.org/wiki/Voronoi_diagram" rel="nofollow">Voronoi diagrams</a> and <a href="http://en.wikipedia.org/wiki/Delaunay_triangulation" rel="nofollow">Delaunay triangulations</a> in 2-dimensional space. It can be used for geospatial clustering of points, among other things.</p>
-        <p>It is implemented as a C extension using <a href="http://ect.bell-labs.com/who/sjf/" rel="nofollow">Steven Fortune's</a> sweepline algorithm and the original code that he published, along with some memory management improvements by <a href="http://www.derekbradley.ca" rel="nofollow">Derek Bradley</a>. It is licensed under the <a href="http://www.opensource.org/licenses/mit-license.php" rel="nofollow"><acronym title="Massachusetts Institute of Technology">MIT</acronym> License</a>.</p>
-      </dd>
-      <dt><a href="http://github.com/abscondment/protofarbtastic" title="Farbtastic for Prototype">protofarbtastic</a></dt>
-      <dd>
-        <p>protofarbtastic is a port of <a href="http://acko.net/dev/farbtastic" rel="nofollow">Steven Wittens' farbtastic color picker</a>. The original farbtastic is built as a jQuery plugin; protofarbtastic has been rewritten to sit on top of the Prototype framework instead.</p>
-      </dd>
-    </dl>
-    </div>
-    <div class="footer">
-Copyright &copy; Brendan Ribera 2009. This work is licensed under a <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons Attribution-Share Alike 3.0 United States License</a>. <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/us/80x15.png" /></a>
-    </div>
+      <div class="lbar">
+	<ul class="menu">
+          <li><a href="./" class="selected">Blog</a></li>
+          <li><a href="software">Software</a></li>
+	</ul>
+      </div>
+      <div class="header">
+	<a href="./">Revelation</a>
+      </div>
+      <div class="content">
+	<h1>Revelation</h1> 
+	<p>Welcome.</p>
+      </div>
+      <div class="footer">
+	Copyright &copy; Brendan Ribera 2009. This work is licensed under a <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons Attribution-Share Alike 3.0 United States License</a>. <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/us/80x15.png" /></a>
+      </div>
     </div>
   </body>
 </html>
