--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,53 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" 
-"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>Revelation</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-  </head>
-  <body>
-    <div class="envelope">
-      <div class="lbar">
-        <ul class="menu">
-          <li><a href="./" class="selected">Blog</a></li>
-          <li><a href="software">Software</a></li>
-        </ul>
-      </div>
-      <div class="header">
-        <a href="./">Revelation</a>
-      </div>
-      <div class="content">
-        <h1>Revelation</h1> 
-        <p>Welcome.</p>
-      </div>
-      <div class="footer">
-        Copyright &copy; Brendan Ribera 2009. This work is licensed under a <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons Attribution-Share Alike 3.0 United States License</a>. <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/us/80x15.png" /></a>
-      </div>
-    </div>
-  </body>
+   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"> 
+<html xmlns="http://www.w3.org/1999/xhtml"> 
+  <head> 
+    <title>Brendan Ribera - Blog</title> 
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" /> 
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" /> 
+    <script type="text/javascript" src="http://widgets.twimg.com/j/1/widget.js"></script> 
+    <link href="http://widgets.twimg.com/j/1/widget.css" type="text/css" rel="stylesheet"> 
+    <script type="text/javascript"> 
+      var onPageLoad = function() {
+        new TWTR.Widget({
+	  profile: true,
+	    id: 'twtr-profile-widget',
+	      loop: true,
+	        width: 600,
+          height: 300,
+          theme: {
+            shell: {
+              background: '#00a000',
+              color: '#ffffff'
+            },
+            tweets: {
+              background: '#ffffff',
+              color: '#444444',
+              links: '#1985b5'
+            }
+          }
+        }).render().setProfile('abscondment').start();
+      };
+    </script> 
+  </head> 
+  <body onload="onPageLoad();"> 
+    <div class="envelope"> 
+    <div class="lbar"> 
+      <ul class="menu"> 
+        <li><a href="./" class="selected">Blog</a></li> 
+        <li><a href="./software/">Software</a></li> 
+      </ul> 
+    </div> 
+    <div class="header"> 
+      <a href="./">Brendan</a> &raquo; Blog
+    </div> 
+    <div class="content"> 
+      <p>(Actual blog coming soon; for now, follow me <a href="http://twitter.com/abscondment" rel="nofollow">on Twitter</a>)</p>
+      <div id="twtr-profile-widget"></div>
+    </div> 
+    <div class="footer"> 
+Copyright &copy; Brendan Ribera 2009. This work is licensed under a <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons Attribution-Share Alike 3.0 United States License</a>. <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/us/80x15.png" /></a> 
+    </div> 
+    </div> 
+  </body> 
 </html>
