--- a/public/software/index.html
+++ b/public/software/index.html
@@ -3,38 +3,46 @@
    "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Revelation &raquo; Software</title>
+    <title>Brendan Ribera - Software</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css" />
   </head>
   <body>
     <div class="envelope">
-      <div class="lbar">
-	<ul class="menu">
-          <li><a href="../">Blog</a></li>
-          <li><a href="./" class="selected">Software</a></li>
-	</ul>
-      </div>
-      <div class="header">
-	<a href="../">Revelation</a> &raquo; <a href="./">Software</a>
-      </div>
-      <div class="content">
-	<h1>Software</h1> 
-	<p>Here is some software that I've published. For an up-to-date list, please <a href="http://github.com/abscondment" rel="nofollow">fork me (abscondment)</a> on github.</p>
-	<dl>
-	  <dt><a href="http://github.com/abscondment/rubyvor">RubyVor</a></dt>
-	  <dd>
-            <p>RubyVor is a <a href="http://rubygems.org">ruby gem</a> providing efficient computation of <a href="http://en.wikipedia.org/wiki/Voronoi_diagram" rel="nofollow">Voronoi diagrams</a> and <a href="http://en.wikipedia.org/wiki/Delaunay_triangulation" rel="nofollow">Delaunay triangulations</a> in 2-dimensional space. It can be used for geospatial clustering of points, among other things.</p>
-            <p>It is implemented as a C extension using <a href="http://ect.bell-labs.com/who/sjf/" rel="nofollow">Steven Fortune's</a> sweepline algorithm and the original code that he published, along with some memory management improvements by <a href="http://www.derekbradley.ca" rel="nofollow">Derek Bradley</a>. It is licensed under the <a href="http://www.opensource.org/licenses/mit-license.php" rel="nofollow"><acronym title="Massachusetts Institute of Technology">MIT</acronym> License</a>.</p>
-	  </dd>
-	  <dt><a href="http://github.com/abscondment/protofarbtastic" title="Farbtastic for Prototype">protofarbtastic</a></dt>
-	  <dd>
-            <p>protofarbtastic is a port of <a href="http://acko.net/dev/farbtastic" rel="nofollow">Steven Wittens' farbtastic color picker</a>. The original farbtastic is built as a jQuery plugin; protofarbtastic has been rewritten to sit on top of the Prototype framework instead.</p>
-	  </dd>
-	</dl>
-      </div>
-      <div class="footer">
-	Copyright &copy; Brendan Ribera 2009. This work is licensed under a <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons Attribution-Share Alike 3.0 United States License</a>. <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/us/80x15.png" /></a>
-      </div>
+    <div class="lbar">
+      <ul class="menu">
+        <li><a href="../">Blog</a></li>
+        <li><a href="./" class="selected">Software</a></li>
+      </ul>
+    </div>
+    <div class="header">
+      <a href="../">Brendan</a> &raquo; Software
+    </div>
+    <div class="content">
+      <p>Here are some software projects that I have published. For an up-to-date list, please <a href="http://github.com/abscondment" title="fork abscondment on GitHub">fork me (abscondment)</a> on GitHub.</p>
+      <dl>
+      <dt><a href="http://github.com/abscondment/clj-kdtree" title="clj-kdtree: Clojure implementation of kD-trees, a space-partitioning binary tree useful for nearest-neighbor queries.">clj-kdtree (Clojure library)</a></dt>
+      <dd>
+        <p>clj-kdtree is a Clojure implementation of the <a href="http://en.wikipedia.org/wiki/Kd-tree" rel="nofollow">kD-tree data structure</a>. This type of binary tree partitions a set of points across each dimension, allowing for efficient nearest-neighbor search.</p>
+      </dd>
+      <dt><a href="http://github.com/abscondment/statistics2" title="Statistics2: Ruby gem providing probabilistic distributions: normal distribution, chi-square distribution, t-distribution, F-distribution.">Statistics2 (Ruby gem)</a></dt>
+      <dd>
+        <p>Statistics2 is a module that provides <a href="http://en.wikipedia.org/wiki/Normal_distribution" rel="nofollow">normal</a>, <a href="http://en.wikipedia.org/wiki/Chi-square_distribution" rel="nofollow">Chi-square</a>, <a href="http://en.wikipedia.org/wiki/Student%27s_t-distribution" rel="nofollow">t-</a> and <a href="http://en.wikipedia.org/wiki/F-distribution" rel="nofollow">F-</a> <a href="http://en.wikipedia.org/wiki/Probability_distribution" rel="nofollow">probability distributions</a> for Ruby. It is a fork/continuation of <a href="http://raa.ruby-lang.org/project/statistics2/" rel="nofollow">Shin-ichiro Hara's</a> <a href="http://blade.nagaokaut.ac.jp/~sinara/ruby/math/statistics2/index.html" rel="nofollow">original code</a>; it has been updated for compatibility with Ruby 1.9 and has been packaged as a  <a href="http://rubygems.org" rel="nofollow">ruby gem</a>.</p>
+      </dd>
+      <dt><a href="http://github.com/abscondment/rubyvor" title="RubyVor: Voronoi Diagrams and Delaunay Triangulation in Ruby">RubyVor (Ruby gem)</a></dt>
+      <dd>
+        <p>RubyVor is a <a href="http://rubygems.org" rel="nofollow">ruby gem</a> providing efficient computation of <a href="http://en.wikipedia.org/wiki/Voronoi_diagram" rel="nofollow">Voronoi diagrams</a> and <a href="http://en.wikipedia.org/wiki/Delaunay_triangulation" rel="nofollow">Delaunay triangulations</a> in 2-dimensional space. It can be used for geospatial clustering of points, among other things.</p>
+        <p>It is implemented as a C extension using <a href="http://ect.bell-labs.com/who/sjf/" rel="nofollow">Steven Fortune's</a> sweepline algorithm and the original code that he published, along with some memory management improvements by <a href="http://www.derekbradley.ca" rel="nofollow">Derek Bradley</a>. It is licensed under the <a href="http://www.opensource.org/licenses/mit-license.php" rel="nofollow"><acronym title="Massachusetts Institute of Technology">MIT</acronym> License</a>.</p>
+      </dd>
+      <dt><a href="http://github.com/abscondment/protofarbtastic" title="Farbtastic for Prototype">protofarbtastic (JavaScript library)</a></dt>
+      <dd>
+        <p>protofarbtastic is a port of <a href="http://acko.net/dev/farbtastic" rel="nofollow">Steven Wittens' farbtastic color picker</a>. The original farbtastic is built as a jQuery plugin; protofarbtastic has been rewritten to sit on top of the Prototype framework instead.</p>
+      </dd>
+    </dl>
+    </div>
+    <div class="footer">
+Copyright &copy; Brendan Ribera 2009. This work is licensed under a <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons Attribution-Share Alike 3.0 United States License</a>. <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/us/80x15.png" /></a>
+    </div>
     </div>
   </body>
 </html>
