Adding an "About" section.

--- a/public/software/index.html
+++ b/public/software/index.html
@@ -12,6 +12,7 @@
     <div class="lbar">
       <ul class="menu">
         <li><a href="../">Blog</a></li>
+        <li><a href="../about">About</a></li>
         <li><a href="./" class="selected">Software</a></li>
       </ul>
     </div>
