--- a/public/software/index.html
+++ b/public/software/index.html
@@ -42,7 +42,7 @@
     </dl>
     </div>
     <div class="footer">
-Copyright &copy; Brendan Ribera 2009. This work is licensed under a <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons Attribution-Share Alike 3.0 United States License</a>. <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/us/80x15.png" /></a>
+Copyright &copy; Brendan Ribera 2009. This work is licensed under a <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons Attribution-Share Alike 3.0 United States License</a>. <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="/brendan/images/cc_by-sa_80x15.png" /></a>
     </div>
     </div>
   </body>
