--- a/public/about/index.html
+++ b/public/about/index.html
@@ -13,7 +13,7 @@
       <ul class="menu">
         <li><a href="../">Blog</a></li>
         <li><a href="./" class="selected">About</a></li>
-        <li><a href="../software">Software</a></li>
+        <li><a href="../software/">Software</a></li>
       </ul>
     </div>
     <div class="header">
