updating software page

--- a/public/software/index.html
+++ b/public/software/index.html
@@ -33,7 +33,7 @@
       </dd>
       <dt><a href="http://github.com/abscondment/rubyvor" title="RubyVor: Voronoi Diagrams and Delaunay Triangulation in Ruby">RubyVor (Ruby gem)</a></dt>
       <dd>
-        <p>RubyVor is a <a href="http://rubygems.org" rel="nofollow">ruby gem</a> providing efficient computation of <a href="http://en.wikipedia.org/wiki/Voronoi_diagram" rel="nofollow">Voronoi diagrams</a> and <a href="http://en.wikipedia.org/wiki/Delaunay_triangulation" rel="nofollow">Delaunay triangulations</a> in 2-dimensional space. It can be used for geospatial clustering of points, among other things.</p>
+        <p><a href="http://gemcutter.org/gems/rubyvor">RubyVor is a ruby gem</a> providing efficient computation of <a href="http://en.wikipedia.org/wiki/Voronoi_diagram" rel="nofollow">Voronoi diagrams</a> and <a href="http://en.wikipedia.org/wiki/Delaunay_triangulation" rel="nofollow">Delaunay triangulations</a> in 2-dimensional space. It can be used for geospatial clustering of points, among other things.</p>
         <p>It is implemented as a C extension using <a href="http://ect.bell-labs.com/who/sjf/" rel="nofollow">Steven Fortune's</a> sweepline algorithm and the original code that he published, along with some memory management improvements by <a href="http://www.derekbradley.ca" rel="nofollow">Derek Bradley</a>. It is licensed under the <a href="http://www.opensource.org/licenses/mit-license.php" rel="nofollow"><acronym title="Massachusetts Institute of Technology">MIT</acronym> License</a>.</p>
       </dd>
       <dt><a href="http://github.com/abscondment/protofarbtastic" title="Farbtastic for Prototype">protofarbtastic (JavaScript library)</a></dt>
