--- a/public/about/index.html
+++ b/public/about/index.html
@@ -21,7 +21,7 @@
       <a href="../">Brendan</a> &raquo; About
     </div>
     <div class="content">
-      <img style="float:right;" src="/brendan/images/poncho.jpg" alt="Brendan in a poncho"/>
+      <img style="float:right;margin:0 0 0 1em;" src="/brendan/images/poncho.jpg" alt="Brendan in a poncho"/>
       <p>
         My name is Brendan Ribera. I live in Seattle with <a href="http://jeskybera.blogspot.com" rel="friend met spouse">my wife</a> and kids, where we are members of <a href="http://greenlakepc.org" rel="nofollow">Green Lake Presbyterian Church</a>. I create software. I enjoy art, <a href="http://www.goodreads.com/user/show/56916-brendan" rel="nofollow">literature</a>, <a href="http://www.ilike.com/user/abscondment" rel="nofollow">music</a>, startups, theology, hacking, baking, <a href="http://projecteuler.net/index.php?section=profile&amp;profile=abscondment" rel="nofollow">mathematics</a>, open-source software, bicycling, backpacking, <em>et cetera</em>.
       </p>
