--- a/public/about/index.html
+++ b/public/about/index.html
@@ -30,7 +30,10 @@
       </p>
       <p>You can further keep track of me on <a href="http://twitter.com/abscondment" rel="nofollow">Twitter</a> or <a href="http://github.com/abscondment" rel="nofollow">Github</a>.</p>
       <p><em>e</em><sup><em>i</em>&pi;</sup> + 1 = 0</p>
-      <br style="clear:both;"/>
+      <p>
+        <a href='http://www.catb.org/hacker-emblem/' rel='external'><img src='http://www.catb.org/hacker-emblem/glider.png' alt='hacker emblem' /></a>
+        <br style="clear:both;" />
+      </p>
     </div>
     <div class="footer">
 Copyright &copy; Brendan Ribera 2010. This work is licensed under a <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons Attribution-Share Alike 3.0 United States License</a>. <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="/brendan/images/cc_by-sa_80x15.png" /></a>
