New styles, posts, and edits.

--- a/public/software/index.html
+++ b/public/software/index.html
@@ -20,7 +20,7 @@
     <div class="header">
       <a href="../">Brendan</a> &raquo; Software
     </div>
-    <div class="content">
+    <div class="content wide">
       <p>Here are some software projects that I have published. For an up-to-date list, please <a href="http://github.com/abscondment" title="fork abscondment on GitHub">fork me (abscondment)</a> on GitHub.</p>
       <dl>
       <dt><a href="http://github.com/abscondment/clj-kdtree" title="clj-kdtree: Clojure implementation of kD-trees, a space-partitioning binary tree useful for nearest-neighbor queries.">clj-kdtree (Clojure library)</a></dt>
