HTML5 stuff, acronym -> abbr, more JS tweaks

--- a/public/software/index.html
+++ b/public/software/index.html
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" 
-   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Software - Brendan Ribera</title>
@@ -34,7 +32,7 @@
       <dt><a href="http://github.com/abscondment/rubyvor" title="RubyVor: Voronoi Diagrams and Delaunay Triangulation in Ruby">RubyVor (Ruby gem)</a></dt>
       <dd>
         <p><a href="http://gemcutter.org/gems/rubyvor">RubyVor is a ruby gem</a> providing efficient computation of <a href="http://en.wikipedia.org/wiki/Voronoi_diagram" rel="nofollow">Voronoi diagrams</a> and <a href="http://en.wikipedia.org/wiki/Delaunay_triangulation" rel="nofollow">Delaunay triangulations</a> in 2-dimensional space. It can be used for geospatial clustering of points, among other things.</p>
-        <p>It is implemented as a C extension using <a href="http://ect.bell-labs.com/who/sjf/" rel="nofollow">Steven Fortune's</a> sweepline algorithm and the original code that he published, along with some memory management improvements by <a href="http://www.derekbradley.ca" rel="nofollow">Derek Bradley</a>. It is licensed under the <a href="http://www.opensource.org/licenses/mit-license.php" rel="nofollow"><acronym title="Massachusetts Institute of Technology">MIT</acronym> License</a>.</p>
+        <p>It is implemented as a C extension using <a href="http://ect.bell-labs.com/who/sjf/" rel="nofollow">Steven Fortune's</a> sweepline algorithm and the original code that he published, along with some memory management improvements by <a href="http://www.derekbradley.ca" rel="nofollow">Derek Bradley</a>. It is licensed under the <a href="http://www.opensource.org/licenses/mit-license.php" rel="nofollow"><abbr title="Massachusetts Institute of Technology">MIT</abbr> License</a>.</p>
       </dd>
       <dt><a href="http://github.com/abscondment/protofarbtastic" title="Farbtastic for Prototype">protofarbtastic (JavaScript library)</a></dt>
       <dd>
