Added iPhone CSS, enlive dep

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -5,6 +5,7 @@
     <title>About - Brendan Ribera</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css" />
+    <link href="../css/iPhone.css" media="only screen and (max-device-width: 480px)" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="envelope">
