--- a/public/software/index.html
+++ b/public/software/index.html
@@ -16,10 +16,13 @@
         <li><a href="./" class="selected">Software</a></li>
       </ul>
     </div>
-    <div class="header">
-      <a href="../">Brendan</a> &raquo; Software
+    <div class="banner">
+      <h1 class="title">Wine, Water, and Blood</h1>
+      <h2>A technical blog by Brendan Ribera</h2>
+      <p>You should <a rel="nofollow" href="http://twitter.com/abscondment">follow me</a> on Twitter, <a rel="nofollow" href="http://feeds.feedburner.com/threebrothers/brendan">subscribe to the feed</a>, and <a rel="nofollow" href="https://github.com/abscondment">fork&nbsp;me</a>&nbsp;on&nbsp;Github.</p>
     </div>
     <div class="content wide">
+      <h1>Software</h1>
       <p>Here are some software projects that I have published. For an up-to-date list, please <a href="http://github.com/abscondment" title="fork abscondment on GitHub">fork me (abscondment)</a> on GitHub.</p>
       <dl>
       <dt><a href="http://github.com/abscondment/clj-kdtree" title="clj-kdtree: Clojure implementation of kD-trees, a space-partitioning binary tree useful for nearest-neighbor queries.">clj-kdtree (Clojure library)</a></dt>
@@ -42,7 +45,7 @@
     </dl>
     </div>
     <div class="footer">
-Copyright &copy; Brendan Ribera 2009. This work is licensed under a <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons Attribution-Share Alike 3.0 United States License</a>. <a rel="license nofollow" href="http://creativecommons.org/licenses/by-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="/brendan/images/cc_by-sa_80x15.png" /></a>
+Copyright &copy; Brendan Ribera <span class='currentYear'>2010</span>. This work is licensed as <a href="http://creativecommons.org/licenses/by-sa/3.0/us/" rel="license nofollow"><img alt="Creative Commons Attribution-Share Alike 3.0 United States License" src="/brendan/images/cc_by-sa_80x15.png" style="border-width:0;vertical-align:top;" /></a>
     </div>
     </div>
     <script type="text/javascript">
