New blog title.

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>About - Brendan Ribera</title>
+    <title>About Brendan</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css" />
     <link href="../css/iPhone.css" media="only screen and (max-device-width: 480px)" rel="stylesheet" type="text/css" />
@@ -18,7 +18,7 @@
       </ul>
     </div>
     <div class="banner">
-      <h1 class="title">Wine, Water, and Blood</h1>
+      <h1 class="title">Quod erat faciendum</h1>
       <h2>A technical blog by Brendan Ribera</h2>
       <p>You should <a rel="nofollow" href="http://twitter.com/abscondment">follow me</a> on Twitter, <a rel="nofollow" href="http://feeds.feedburner.com/threebrothers/brendan">subscribe to the feed</a>, and <a rel="nofollow" href="https://github.com/abscondment">fork&nbsp;me</a>&nbsp;on&nbsp;Github.</p>
     </div>
