Moving feedburner onto a threebrothers.org subdomain.

--- a/public/software/index.html
+++ b/public/software/index.html
@@ -19,7 +19,7 @@
     <div class="banner">
       <h1 class="title">Quod erat faciendum</h1>
       <h2>A technical blog by Brendan Ribera</h2>
-      <p>You should <a rel="nofollow" href="http://twitter.com/abscondment">follow me</a> on Twitter, <a rel="nofollow" href="http://feeds.feedburner.com/threebrothers/brendan">subscribe to the feed</a>, and <a rel="nofollow" href="https://github.com/abscondment">fork&nbsp;me</a>&nbsp;on&nbsp;Github.</p>
+      <p>You should <a rel="nofollow" href="http://twitter.com/abscondment">follow me</a> on Twitter, <a rel="nofollow" href="http://feeds.threebrothers.org/threebrothers/brendan">subscribe to the feed</a>, and <a rel="nofollow" href="https://github.com/abscondment">fork&nbsp;me</a>&nbsp;on&nbsp;Github.</p>
     </div>
     <div class="content wide">
       <h1>Software</h1>
